--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Reynard was here.</p>
+    <p>Reynard Natividad was here.</p>
 </body>
 </html>
